src/protobuf-query/engine/yy/sql.output
Grammar

    0 $accept: query "end of file"

    1 query: select_stmt from_stmt where_stmt group_by_stmt having_stmt order_by_stmt

    2 fn1: "STR"
    3    | "INT"
    4    | "SUM"
    5    | "COUNT"

    6 fn3: "SUBSTR"

    7 select_stmt: "SELECT" select_fields
    8            | "SELECT" "DISTINCT" select_fields

    9 select_fields: select_field
   10              | select_fields "," select_field

   11 select_field: expr
   12             | expr "AS" "identifier"

   13 from_stmt: "FROM" "(" "string" "," "string" ")"

   14 where_stmt: %empty
   15           | "WHERE" boolean_expr

   16 boolean_expr: "(" boolean_expr ")"
   17             | boolean_expr "AND" boolean_expr
   18             | boolean_expr "OR" boolean_expr
   19             | expr "=" expr
   20             | expr "!=" expr
   21             | expr ">" expr
   22             | expr "<" expr
   23             | expr ">=" expr
   24             | expr "<=" expr
   25             | expr "LIKE" expr
   26             | "identifier" "IS" "NULL"
   27             | "identifier" "IS" "NOT" "NULL"

   28 expr: "(" expr ")"
   29     | expr "+" expr
   30     | expr "-" expr
   31     | expr "*" expr
   32     | expr "/" expr
   33     | "-" expr
   34     | fn1 "(" expr ")"
   35     | fn3 "(" expr "," expr "," expr ")"
   36     | "identifier"
   37     | "string"
   38     | "long"
   39     | "double"
   40     | "bool"

   41 group_by_stmt: %empty
   42              | "GROUP" "BY" group_by_fields

   43 group_by_fields: group_by_field
   44                | group_by_fields "," group_by_field

   45 group_by_field: "identifier"

   46 having_stmt: %empty
   47            | "HAVING" boolean_expr

   48 order_by_stmt: %empty
   49              | "ORDER" "BY" order_by_fields

   50 order_by_fields: order_by_field
   51                | order_by_fields "," order_by_field

   52 order_by_field: expr
   53               | expr "ASC"
   54               | expr "DESC"


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
"SELECT" (258) 7 8
"FROM" (259) 13
"WHERE" (260) 15
"GROUP" (261) 42
"HAVING" (262) 47
"ORDER" (263) 49
"BY" (264) 42 49
"AS" (265) 12
"," (266) 10 13 35 44 51
"+" (267) 29
"-" (268) 30 33
"*" (269) 31
"/" (270) 32
"=" (271) 19
"!=" (272) 20
"<" (273) 22
">" (274) 21
"<=" (275) 24
">=" (276) 23
"LIKE" (277) 25
"IS" (278) 26 27
"NOT" (279) 27
"NULL" (280) 26 27
"AND" (281) 17
"OR" (282) 18
"(" (283) 13 16 28 34 35
")" (284) 13 16 28 34 35
"DISTINCT" (285) 8
"ASC" (286) 53
"DESC" (287) 54
"identifier" (288) 12 26 27 36 45
"string" (289) 13 37
"long" (290) 38
"double" (291) 39
"bool" (292) 40
"STR" (293) 2
"INT" (294) 3
"SUM" (295) 4
"COUNT" (296) 5
"SUBSTR" (297) 6
UMINUS (298)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
query (45)
    on left: 1, on right: 0
fn1 (46)
    on left: 2 3 4 5, on right: 34
fn3 (47)
    on left: 6, on right: 35
select_stmt (48)
    on left: 7 8, on right: 1
select_fields (49)
    on left: 9 10, on right: 7 8 10
select_field (50)
    on left: 11 12, on right: 9 10
from_stmt (51)
    on left: 13, on right: 1
where_stmt (52)
    on left: 14 15, on right: 1
boolean_expr (53)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27, on right: 15 16 17
    18 47
expr (54)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40, on right: 11 12
    19 20 21 22 23 24 25 28 29 30 31 32 33 34 35 52 53 54
group_by_stmt (55)
    on left: 41 42, on right: 1
group_by_fields (56)
    on left: 43 44, on right: 42 44
group_by_field (57)
    on left: 45, on right: 43 44
having_stmt (58)
    on left: 46 47, on right: 1
order_by_stmt (59)
    on left: 48 49, on right: 1
order_by_fields (60)
    on left: 50 51, on right: 49 51
order_by_field (61)
    on left: 52 53 54, on right: 50 51


State 0

    0 $accept: . query "end of file"
    1 query: . select_stmt from_stmt where_stmt group_by_stmt having_stmt order_by_stmt
    7 select_stmt: . "SELECT" select_fields
    8            | . "SELECT" "DISTINCT" select_fields

    "SELECT"  shift, and go to state 1

    query        go to state 2
    select_stmt  go to state 3


State 1

    2 fn1: . "STR"
    3    | . "INT"
    4    | . "SUM"
    5    | . "COUNT"
    6 fn3: . "SUBSTR"
    7 select_stmt: "SELECT" . select_fields
    8            | "SELECT" . "DISTINCT" select_fields
    9 select_fields: . select_field
   10              | . select_fields "," select_field
   11 select_field: . expr
   12             | . expr "AS" "identifier"
   28 expr: . "(" expr ")"
   29     | . expr "+" expr
   30     | . expr "-" expr
   31     | . expr "*" expr
   32     | . expr "/" expr
   33     | . "-" expr
   34     | . fn1 "(" expr ")"
   35     | . fn3 "(" expr "," expr "," expr ")"
   36     | . "identifier"
   37     | . "string"
   38     | . "long"
   39     | . "double"
   40     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 5
    "DISTINCT"    shift, and go to state 6
    "identifier"  shift, and go to state 7
    "string"      shift, and go to state 8
    "long"        shift, and go to state 9
    "double"      shift, and go to state 10
    "bool"        shift, and go to state 11
    "STR"         shift, and go to state 12
    "INT"         shift, and go to state 13
    "SUM"         shift, and go to state 14
    "COUNT"       shift, and go to state 15
    "SUBSTR"      shift, and go to state 16

    fn1            go to state 17
    fn3            go to state 18
    select_fields  go to state 19
    select_field   go to state 20
    expr           go to state 21


State 2

    0 $accept: query . "end of file"

    "end of file"  shift, and go to state 22


State 3

    1 query: select_stmt . from_stmt where_stmt group_by_stmt having_stmt order_by_stmt
   13 from_stmt: . "FROM" "(" "string" "," "string" ")"

    "FROM"  shift, and go to state 23

    from_stmt  go to state 24


State 4

    2 fn1: . "STR"
    3    | . "INT"
    4    | . "SUM"
    5    | . "COUNT"
    6 fn3: . "SUBSTR"
   28 expr: . "(" expr ")"
   29     | . expr "+" expr
   30     | . expr "-" expr
   31     | . expr "*" expr
   32     | . expr "/" expr
   33     | . "-" expr
   33     | "-" . expr
   34     | . fn1 "(" expr ")"
   35     | . fn3 "(" expr "," expr "," expr ")"
   36     | . "identifier"
   37     | . "string"
   38     | . "long"
   39     | . "double"
   40     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 5
    "identifier"  shift, and go to state 7
    "string"      shift, and go to state 8
    "long"        shift, and go to state 9
    "double"      shift, and go to state 10
    "bool"        shift, and go to state 11
    "STR"         shift, and go to state 12
    "INT"         shift, and go to state 13
    "SUM"         shift, and go to state 14
    "COUNT"       shift, and go to state 15
    "SUBSTR"      shift, and go to state 16

    fn1   go to state 17
    fn3   go to state 18
    expr  go to state 25


State 5

    2 fn1: . "STR"
    3    | . "INT"
    4    | . "SUM"
    5    | . "COUNT"
    6 fn3: . "SUBSTR"
   28 expr: . "(" expr ")"
   28     | "(" . expr ")"
   29     | . expr "+" expr
   30     | . expr "-" expr
   31     | . expr "*" expr
   32     | . expr "/" expr
   33     | . "-" expr
   34     | . fn1 "(" expr ")"
   35     | . fn3 "(" expr "," expr "," expr ")"
   36     | . "identifier"
   37     | . "string"
   38     | . "long"
   39     | . "double"
   40     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 5
    "identifier"  shift, and go to state 7
    "string"      shift, and go to state 8
    "long"        shift, and go to state 9
    "double"      shift, and go to state 10
    "bool"        shift, and go to state 11
    "STR"         shift, and go to state 12
    "INT"         shift, and go to state 13
    "SUM"         shift, and go to state 14
    "COUNT"       shift, and go to state 15
    "SUBSTR"      shift, and go to state 16

    fn1   go to state 17
    fn3   go to state 18
    expr  go to state 26


State 6

    2 fn1: . "STR"
    3    | . "INT"
    4    | . "SUM"
    5    | . "COUNT"
    6 fn3: . "SUBSTR"
    8 select_stmt: "SELECT" "DISTINCT" . select_fields
    9 select_fields: . select_field
   10              | . select_fields "," select_field
   11 select_field: . expr
   12             | . expr "AS" "identifier"
   28 expr: . "(" expr ")"
   29     | . expr "+" expr
   30     | . expr "-" expr
   31     | . expr "*" expr
   32     | . expr "/" expr
   33     | . "-" expr
   34     | . fn1 "(" expr ")"
   35     | . fn3 "(" expr "," expr "," expr ")"
   36     | . "identifier"
   37     | . "string"
   38     | . "long"
   39     | . "double"
   40     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 5
    "identifier"  shift, and go to state 7
    "string"      shift, and go to state 8
    "long"        shift, and go to state 9
    "double"      shift, and go to state 10
    "bool"        shift, and go to state 11
    "STR"         shift, and go to state 12
    "INT"         shift, and go to state 13
    "SUM"         shift, and go to state 14
    "COUNT"       shift, and go to state 15
    "SUBSTR"      shift, and go to state 16

    fn1            go to state 17
    fn3            go to state 18
    select_fields  go to state 27
    select_field   go to state 20
    expr           go to state 21


State 7

   36 expr: "identifier" .

    $default  reduce using rule 36 (expr)


State 8

   37 expr: "string" .

    $default  reduce using rule 37 (expr)


State 9

   38 expr: "long" .

    $default  reduce using rule 38 (expr)


State 10

   39 expr: "double" .

    $default  reduce using rule 39 (expr)


State 11

   40 expr: "bool" .

    $default  reduce using rule 40 (expr)


State 12

    2 fn1: "STR" .

    $default  reduce using rule 2 (fn1)


State 13

    3 fn1: "INT" .

    $default  reduce using rule 3 (fn1)


State 14

    4 fn1: "SUM" .

    $default  reduce using rule 4 (fn1)


State 15

    5 fn1: "COUNT" .

    $default  reduce using rule 5 (fn1)


State 16

    6 fn3: "SUBSTR" .

    $default  reduce using rule 6 (fn3)


State 17

   34 expr: fn1 . "(" expr ")"

    "("  shift, and go to state 28


State 18

   35 expr: fn3 . "(" expr "," expr "," expr ")"

    "("  shift, and go to state 29


State 19

    7 select_stmt: "SELECT" select_fields .  ["FROM"]
   10 select_fields: select_fields . "," select_field

    ","  shift, and go to state 30

    $default  reduce using rule 7 (select_stmt)


State 20

    9 select_fields: select_field .

    $default  reduce using rule 9 (select_fields)


State 21

   11 select_field: expr .  ["FROM", ","]
   12             | expr . "AS" "identifier"
   29 expr: expr . "+" expr
   30     | expr . "-" expr
   31     | expr . "*" expr
   32     | expr . "/" expr

    "AS"  shift, and go to state 31
    "+"   shift, and go to state 32
    "-"   shift, and go to state 33
    "*"   shift, and go to state 34
    "/"   shift, and go to state 35

    $default  reduce using rule 11 (select_field)


State 22

    0 $accept: query "end of file" .

    $default  accept


State 23

   13 from_stmt: "FROM" . "(" "string" "," "string" ")"

    "("  shift, and go to state 36


State 24

    1 query: select_stmt from_stmt . where_stmt group_by_stmt having_stmt order_by_stmt
   14 where_stmt: . %empty  ["end of file", "GROUP", "HAVING", "ORDER"]
   15           | . "WHERE" boolean_expr

    "WHERE"  shift, and go to state 37

    $default  reduce using rule 14 (where_stmt)

    where_stmt  go to state 38


State 25

   29 expr: expr . "+" expr
   30     | expr . "-" expr
   31     | expr . "*" expr
   32     | expr . "/" expr
   33     | "-" expr .  ["end of file", "FROM", "GROUP", "HAVING", "ORDER", "AS", ",", "+", "-", "*", "/", "=", "!=", "<", ">", "<=", ">=", "LIKE", "AND", "OR", ")", "ASC", "DESC"]

    $default  reduce using rule 33 (expr)

    Conflict between rule 33 and token "+" resolved as reduce ("+" < UMINUS).
    Conflict between rule 33 and token "-" resolved as reduce ("-" < UMINUS).
    Conflict between rule 33 and token "*" resolved as reduce ("*" < UMINUS).
    Conflict between rule 33 and token "/" resolved as reduce ("/" < UMINUS).


State 26

   28 expr: "(" expr . ")"
   29     | expr . "+" expr
   30     | expr . "-" expr
   31     | expr . "*" expr
   32     | expr . "/" expr

    "+"  shift, and go to state 32
    "-"  shift, and go to state 33
    "*"  shift, and go to state 34
    "/"  shift, and go to state 35
    ")"  shift, and go to state 39


State 27

    8 select_stmt: "SELECT" "DISTINCT" select_fields .  ["FROM"]
   10 select_fields: select_fields . "," select_field

    ","  shift, and go to state 30

    $default  reduce using rule 8 (select_stmt)


State 28

    2 fn1: . "STR"
    3    | . "INT"
    4    | . "SUM"
    5    | . "COUNT"
    6 fn3: . "SUBSTR"
   28 expr: . "(" expr ")"
   29     | . expr "+" expr
   30     | . expr "-" expr
   31     | . expr "*" expr
   32     | . expr "/" expr
   33     | . "-" expr
   34     | . fn1 "(" expr ")"
   34     | fn1 "(" . expr ")"
   35     | . fn3 "(" expr "," expr "," expr ")"
   36     | . "identifier"
   37     | . "string"
   38     | . "long"
   39     | . "double"
   40     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 5
    "identifier"  shift, and go to state 7
    "string"      shift, and go to state 8
    "long"        shift, and go to state 9
    "double"      shift, and go to state 10
    "bool"        shift, and go to state 11
    "STR"         shift, and go to state 12
    "INT"         shift, and go to state 13
    "SUM"         shift, and go to state 14
    "COUNT"       shift, and go to state 15
    "SUBSTR"      shift, and go to state 16

    fn1   go to state 17
    fn3   go to state 18
    expr  go to state 40


State 29

    2 fn1: . "STR"
    3    | . "INT"
    4    | . "SUM"
    5    | . "COUNT"
    6 fn3: . "SUBSTR"
   28 expr: . "(" expr ")"
   29     | . expr "+" expr
   30     | . expr "-" expr
   31     | . expr "*" expr
   32     | . expr "/" expr
   33     | . "-" expr
   34     | . fn1 "(" expr ")"
   35     | . fn3 "(" expr "," expr "," expr ")"
   35     | fn3 "(" . expr "," expr "," expr ")"
   36     | . "identifier"
   37     | . "string"
   38     | . "long"
   39     | . "double"
   40     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 5
    "identifier"  shift, and go to state 7
    "string"      shift, and go to state 8
    "long"        shift, and go to state 9
    "double"      shift, and go to state 10
    "bool"        shift, and go to state 11
    "STR"         shift, and go to state 12
    "INT"         shift, and go to state 13
    "SUM"         shift, and go to state 14
    "COUNT"       shift, and go to state 15
    "SUBSTR"      shift, and go to state 16

    fn1   go to state 17
    fn3   go to state 18
    expr  go to state 41


State 30

    2 fn1: . "STR"
    3    | . "INT"
    4    | . "SUM"
    5    | . "COUNT"
    6 fn3: . "SUBSTR"
   10 select_fields: select_fields "," . select_field
   11 select_field: . expr
   12             | . expr "AS" "identifier"
   28 expr: . "(" expr ")"
   29     | . expr "+" expr
   30     | . expr "-" expr
   31     | . expr "*" expr
   32     | . expr "/" expr
   33     | . "-" expr
   34     | . fn1 "(" expr ")"
   35     | . fn3 "(" expr "," expr "," expr ")"
   36     | . "identifier"
   37     | . "string"
   38     | . "long"
   39     | . "double"
   40     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 5
    "identifier"  shift, and go to state 7
    "string"      shift, and go to state 8
    "long"        shift, and go to state 9
    "double"      shift, and go to state 10
    "bool"        shift, and go to state 11
    "STR"         shift, and go to state 12
    "INT"         shift, and go to state 13
    "SUM"         shift, and go to state 14
    "COUNT"       shift, and go to state 15
    "SUBSTR"      shift, and go to state 16

    fn1           go to state 17
    fn3           go to state 18
    select_field  go to state 42
    expr          go to state 21


State 31

   12 select_field: expr "AS" . "identifier"

    "identifier"  shift, and go to state 43


State 32

    2 fn1: . "STR"
    3    | . "INT"
    4    | . "SUM"
    5    | . "COUNT"
    6 fn3: . "SUBSTR"
   28 expr: . "(" expr ")"
   29     | . expr "+" expr
   29     | expr "+" . expr
   30     | . expr "-" expr
   31     | . expr "*" expr
   32     | . expr "/" expr
   33     | . "-" expr
   34     | . fn1 "(" expr ")"
   35     | . fn3 "(" expr "," expr "," expr ")"
   36     | . "identifier"
   37     | . "string"
   38     | . "long"
   39     | . "double"
   40     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 5
    "identifier"  shift, and go to state 7
    "string"      shift, and go to state 8
    "long"        shift, and go to state 9
    "double"      shift, and go to state 10
    "bool"        shift, and go to state 11
    "STR"         shift, and go to state 12
    "INT"         shift, and go to state 13
    "SUM"         shift, and go to state 14
    "COUNT"       shift, and go to state 15
    "SUBSTR"      shift, and go to state 16

    fn1   go to state 17
    fn3   go to state 18
    expr  go to state 44


State 33

    2 fn1: . "STR"
    3    | . "INT"
    4    | . "SUM"
    5    | . "COUNT"
    6 fn3: . "SUBSTR"
   28 expr: . "(" expr ")"
   29     | . expr "+" expr
   30     | . expr "-" expr
   30     | expr "-" . expr
   31     | . expr "*" expr
   32     | . expr "/" expr
   33     | . "-" expr
   34     | . fn1 "(" expr ")"
   35     | . fn3 "(" expr "," expr "," expr ")"
   36     | . "identifier"
   37     | . "string"
   38     | . "long"
   39     | . "double"
   40     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 5
    "identifier"  shift, and go to state 7
    "string"      shift, and go to state 8
    "long"        shift, and go to state 9
    "double"      shift, and go to state 10
    "bool"        shift, and go to state 11
    "STR"         shift, and go to state 12
    "INT"         shift, and go to state 13
    "SUM"         shift, and go to state 14
    "COUNT"       shift, and go to state 15
    "SUBSTR"      shift, and go to state 16

    fn1   go to state 17
    fn3   go to state 18
    expr  go to state 45


State 34

    2 fn1: . "STR"
    3    | . "INT"
    4    | . "SUM"
    5    | . "COUNT"
    6 fn3: . "SUBSTR"
   28 expr: . "(" expr ")"
   29     | . expr "+" expr
   30     | . expr "-" expr
   31     | . expr "*" expr
   31     | expr "*" . expr
   32     | . expr "/" expr
   33     | . "-" expr
   34     | . fn1 "(" expr ")"
   35     | . fn3 "(" expr "," expr "," expr ")"
   36     | . "identifier"
   37     | . "string"
   38     | . "long"
   39     | . "double"
   40     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 5
    "identifier"  shift, and go to state 7
    "string"      shift, and go to state 8
    "long"        shift, and go to state 9
    "double"      shift, and go to state 10
    "bool"        shift, and go to state 11
    "STR"         shift, and go to state 12
    "INT"         shift, and go to state 13
    "SUM"         shift, and go to state 14
    "COUNT"       shift, and go to state 15
    "SUBSTR"      shift, and go to state 16

    fn1   go to state 17
    fn3   go to state 18
    expr  go to state 46


State 35

    2 fn1: . "STR"
    3    | . "INT"
    4    | . "SUM"
    5    | . "COUNT"
    6 fn3: . "SUBSTR"
   28 expr: . "(" expr ")"
   29     | . expr "+" expr
   30     | . expr "-" expr
   31     | . expr "*" expr
   32     | . expr "/" expr
   32     | expr "/" . expr
   33     | . "-" expr
   34     | . fn1 "(" expr ")"
   35     | . fn3 "(" expr "," expr "," expr ")"
   36     | . "identifier"
   37     | . "string"
   38     | . "long"
   39     | . "double"
   40     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 5
    "identifier"  shift, and go to state 7
    "string"      shift, and go to state 8
    "long"        shift, and go to state 9
    "double"      shift, and go to state 10
    "bool"        shift, and go to state 11
    "STR"         shift, and go to state 12
    "INT"         shift, and go to state 13
    "SUM"         shift, and go to state 14
    "COUNT"       shift, and go to state 15
    "SUBSTR"      shift, and go to state 16

    fn1   go to state 17
    fn3   go to state 18
    expr  go to state 47


State 36

   13 from_stmt: "FROM" "(" . "string" "," "string" ")"

    "string"  shift, and go to state 48


State 37

    2 fn1: . "STR"
    3    | . "INT"
    4    | . "SUM"
    5    | . "COUNT"
    6 fn3: . "SUBSTR"
   15 where_stmt: "WHERE" . boolean_expr
   16 boolean_expr: . "(" boolean_expr ")"
   17             | . boolean_expr "AND" boolean_expr
   18             | . boolean_expr "OR" boolean_expr
   19             | . expr "=" expr
   20             | . expr "!=" expr
   21             | . expr ">" expr
   22             | . expr "<" expr
   23             | . expr ">=" expr
   24             | . expr "<=" expr
   25             | . expr "LIKE" expr
   26             | . "identifier" "IS" "NULL"
   27             | . "identifier" "IS" "NOT" "NULL"
   28 expr: . "(" expr ")"
   29     | . expr "+" expr
   30     | . expr "-" expr
   31     | . expr "*" expr
   32     | . expr "/" expr
   33     | . "-" expr
   34     | . fn1 "(" expr ")"
   35     | . fn3 "(" expr "," expr "," expr ")"
   36     | . "identifier"
   37     | . "string"
   38     | . "long"
   39     | . "double"
   40     | . "bool"

    "-"           shift, and go to state 4
    "("           shift, and go to state 49
    "identifier"  shift, and go to state 50
    "string"      shift, and go to state 8
    "long"        shift, and go to state 9
    "double"      shift, and go to state 10
    "bool"        shift, and go to state 11
    "STR"         shift, and go to state 12
    "INT"         shift, and go to state 13
    "SUM"         shift, and go to state 14
    "COUNT"       shift, and go to state 15
    "SUBSTR"      shift, and go to state 16

    fn1           go to state 17
    fn3           go to state 18
    boolean_expr  go to state 51
    expr          go to state 52


State 38

    1 query: select_stmt from_stmt where_stmt . group_by_stmt having_stmt order_by_stmt
   41 group_by_stmt: . %empty  ["end of file", "HAVING", "ORDER"]
   42              | . "GROUP" "BY" group_by_fields

    "GROUP"  shift, and go to state 53

    $default  reduce using rule 41 (group_by_stmt)

    group_by_stmt  go to state 54


State 39

   28 expr: "(" expr ")" .

    $default  reduce using rule 28 (expr)


State 40

   29 expr: expr . "+" expr
   30     | expr . "-" expr
   31     | expr . "*" expr
   32     | expr . "/" expr
   34     | fn1 "(" expr . ")"

    "+"  shift, and go to state 32
    "-"  shift, and go to state 33
    "*"  shift, and go to state 34
    "/"  shift, and go to state 35
    ")"  shift, and go to state 55


State 41

   29 expr: expr . "+" expr
   30     | expr . "-" expr
   31     | expr . "*" expr
   32     | expr . "/" expr
   35     | fn3 "(" expr . "," expr "," expr ")"

    ","  shift, and go to state 56
    "+"  shift, and go to state 32
    "-"  shift, and go to state 33
    "*"  shift, and go to state 34
    "/"  shift, and go to state 35


State 42

   10 select_fields: select_fields "," select_field .

    $default  reduce using rule 10 (select_fields)


State 43

   12 select_field: expr "AS" "identifier" .

    $default  reduce using rule 12 (select_field)


State 44

   29 expr: expr . "+" expr
   29     | expr "+" expr .  ["end of file", "FROM", "GROUP", "HAVING", "ORDER", "AS", ",", "+", "-", "=", "!=", "<", ">", "<=", ">=", "LIKE", "AND", "OR", ")", "ASC", "DESC"]
   30     | expr . "-" expr
   31     | expr . "*" expr
   32     | expr . "/" expr

    "*"  shift, and go to state 34
    "/"  shift, and go to state 35

    $default  reduce using rule 29 (expr)

    Conflict between rule 29 and token "+" resolved as reduce (%left "+").
    Conflict between rule 29 and token "-" resolved as reduce (%left "-").
    Conflict between rule 29 and token "*" resolved as shift ("+" < "*").
    Conflict between rule 29 and token "/" resolved as shift ("+" < "/").


State 45

   29 expr: expr . "+" expr
   30     | expr . "-" expr
   30     | expr "-" expr .  ["end of file", "FROM", "GROUP", "HAVING", "ORDER", "AS", ",", "+", "-", "=", "!=", "<", ">", "<=", ">=", "LIKE", "AND", "OR", ")", "ASC", "DESC"]
   31     | expr . "*" expr
   32     | expr . "/" expr

    "*"  shift, and go to state 34
    "/"  shift, and go to state 35

    $default  reduce using rule 30 (expr)

    Conflict between rule 30 and token "+" resolved as reduce (%left "+").
    Conflict between rule 30 and token "-" resolved as reduce (%left "-").
    Conflict between rule 30 and token "*" resolved as shift ("-" < "*").
    Conflict between rule 30 and token "/" resolved as shift ("-" < "/").


State 46

   29 expr: expr . "+" expr
   30     | expr . "-" expr
   31     | expr . "*" expr
   31     | expr "*" expr .  ["end of file", "FROM", "GROUP", "HAVING", "ORDER", "AS", ",", "+", "-", "*", "/", "=", "!=", "<", ">", "<=", ">=", "LIKE", "AND", "OR", ")", "ASC", "DESC"]
   32     | expr . "/" expr

    $default  reduce using rule 31 (expr)

    Conflict between rule 31 and token "+" resolved as reduce ("+" < "*").
    Conflict between rule 31 and token "-" resolved as reduce ("-" < "*").
    Conflict between rule 31 and token "*" resolved as reduce (%left "*").
    Conflict between rule 31 and token "/" resolved as reduce (%left "/").


State 47

   29 expr: expr . "+" expr
   30     | expr . "-" expr
   31     | expr . "*" expr
   32     | expr . "/" expr
   32     | expr "/" expr .  ["end of file", "FROM", "GROUP", "HAVING", "ORDER", "AS", ",", "+", "-", "*", "/", "=", "!=", "<", ">", "<=", ">=", "LIKE", "AND", "OR", ")", "ASC", "DESC"]

    $default  reduce using rule 32 (expr)

    Conflict between rule 32 and token "+" resolved as reduce ("+" < "/").
    Conflict between rule 32 and token "-" resolved as reduce ("-" < "/").
    Conflict between rule 32 and token "*" resolved as reduce (%left "*").
    Conflict between rule 32 and token "/" resolved as reduce (%left "/").


State 48

   13 from_stmt: "FROM" "(" "string" . "," "string" ")"

    ","  shift, and go to state 57


State 49
